--- a/Client/wwwroot/css/site.css
+++ b/Client/wwwroot/css/site.css
@@ -16,3 +16,108 @@ html {
 body {
   margin-bottom: 60px;
 }
+.table-wrapper {
+    max-height: 60vh;
+    width:50vw;
+    overflow: auto;
+    display: inline-block;
+}
+
+.table-container{
+    max-height:100vh;
+}
+
+.normal {
+    background-color: #D9D9D9;
+    border-radius: 5px;
+    padding: 0 3px 3px;
+}
+
+.grass {
+    background-color: #47AB57;
+    border-radius: 5px;
+    padding: 0 3px 3px;
+}
+
+.fire {
+    background-color: #FD7D24;
+    border-radius: 5px;
+    padding: 0 3px 3px;
+}
+.water {
+    background-color: #4592C4;
+    border-radius: 5px;
+    padding: 0 3px 3px;
+}
+.bug {
+    background-color: #719F3F;
+    border-radius: 5px;
+    padding: 0 3px 3px;
+}
+.electric {
+    background-color: #EED535;
+    border-radius: 5px;
+    padding: 0 3px 3px;
+}
+.rock {
+    background-color: #A38C21;
+    border-radius: 5px;
+    padding: 0 3px 3px;
+}
+.ghost {
+    background-color: #7B62A3;
+    border-radius: 5px;
+    padding: 0 3px 3px;
+}
+.poison {
+    background-color: #B97FC9;
+    border-radius: 5px;
+    padding: 0 3px 3px;
+}
+.psychic {
+    background-color: #F366B9;
+    border-radius: 5px;
+    padding: 0 3px 3px;
+}
+.fighting {
+    background-color: #D56723;
+    border-radius: 5px;
+    padding: 0 3px 3px;
+}
+.ground {
+    background-color: #AB9842;
+    border-radius: 5px;
+    padding: 0 3px 3px;
+}
+.dragon {
+    background-color: #F06D56;
+    border-radius: 5px;
+    padding: 0 3px 3px;
+}
+.reset {
+    background-color: #000000;
+    border-radius: 5px;
+    padding: 0 3px 3px;
+}
+
+.hp {
+    background-color: #53CD5B;
+}
+.attack {
+    background-color: #F6DE52;
+}
+.defense {
+    background-color: #ED7F0F;
+}
+.special-attack {
+    background-color: #56B0F1;
+}
+.special-defense {
+    background-color: #AD62F6;
+}
+.speed {
+    background-color: #F06ACE;
+}
+
+
+
