--- a/Client/Views/PokemonApi/Index.cshtml
+++ b/Client/Views/PokemonApi/Index.cshtml
@@ -1,11 +1,12 @@
 ﻿@{
+    ViewData["Title"] = "Pokemon API";
     Layout = "PokemonApiLayout";
 }
 
 <div class="d-flex justify-content-center align-items-center flex-column table-container">
     <h1 class="text-white mt-5">POKEMON API</h1>
     <div class="table-wrapper">
-        <table class="table table-striped table-secondary">
+        <table class="table table-striped table-secondary table-hover">
             <thead>
                 <tr>
                     <th>No</th>
@@ -19,7 +20,7 @@
                 </tr>
             </tbody>
         </table>
-</nav>
+        </nav>
     </div>
 </div>
 
@@ -61,6 +62,7 @@
                                     <div class="text-center">
                                         <h3>Ability</h3>
                                         <ul class="list-group list-group-numbered overflow-auto">
+                                            @* //Pokemon abilities *@
                                         </ul>
                                     </div>
 
@@ -69,27 +71,43 @@
                         </div>
                     </div>
                     <div class="col-sm-6">
-                        <div class="card">
-                            <div class="card-body">
-                                <div class="text-center">
-                                    <h5 class="card-title">Stats</h5>
+                        <ul class="nav nav-pills mb-3" id="pills-tab" role="tablist">
+                            <li class="nav-item" role="presentation">
+                                <button class="nav-link active" id="pills-home-tab" data-bs-toggle="pill" data-bs-target="#pills-home" type="button" role="tab" aria-controls="pills-home" aria-selected="true">Stats</button>
+                            </li>
+                            <li class="nav-item" role="presentation">
+                                <button class="nav-link" id="pills-profile-tab" data-bs-toggle="pill" data-bs-target="#pills-profile" type="button" role="tab" aria-controls="pills-profile" aria-selected="false">Moves</button>
+                            </li>
+                        </ul>
+                        <div class="tab-content" id="pills-tabContent">
+                            <div class="tab-pane fade show active" id="pills-home" role="tabpanel" aria-labelledby="pills-home-tab">
+                                <div class="card">
+                                    <div class="card-body">
+                                        <div class="text-center">
+                                            <h5 class="card-title">Stats</h5>
+                                        </div>
+                                        <div class="row stats-detail">
+                                            @* pokemon detail stats *@
+                                        </div>
+                                    </div>
                                 </div>
-                                <div class="row stats-detail">
-                                </div>
+
                             </div>
+                            <div class="tab-pane fade" id="pills-profile" role="tabpanel" aria-labelledby="pills-profile-tab">...</div>
+                            <div class="tab-pane fade" id="pills-contact" role="tabpanel" aria-labelledby="pills-contact-tab">...</div>
                         </div>
                     </div>
-                </div>
 
-            </div>
-            <div class="modal-footer">
-                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                </div>
             </div>
         </div>
     </div>
-</div>
 
 
-@section Scripts{
-    <script src="~/js/pokeApi.js"></script>
-}
+    @section Scripts{
+        <script src="~/js/pokeApi.js"></script>
+
+    }
