add http client

--- a/Client/Views/Employee/Index.cshtml
+++ b/Client/Views/Employee/Index.cshtml
@@ -19,7 +19,7 @@
 <div class="card">
     <div class="card-body">
         <div class="table-responsive">
-            <table class="table " id="tabelEmployee">
+            <table class="table" style="width:100%;" id="tabelEmployee">
                 <thead>
                     <tr>
                         <th>#</th>
