--- a/Client/Views/Shared/AdminLayout.cshtml
+++ b/Client/Views/Shared/AdminLayout.cshtml
@@ -202,7 +202,7 @@
                                    data-feather="settings"></i>Settings
                             </a>
                             <hr class="m-0">
-                            <a class="dropdown-item logout pb-0" href="signin.html">
+                            <a class="dropdown-item logout pb-0" href="/logout">
                                 <img src="~/assets/img/icons/log-out.svg" class="me-2" alt="img">Logout
                             </a>
                         </div>
